fix shitty word wrapping on smaller phones

--- a/assets/css/site.2.css
+++ b/assets/css/site.2.css
@@ -165,6 +165,10 @@ jumbo .container > div {
     min-height: 356px;
 }
 
+jumbo h1 {
+    font-size: 40px;
+}
+
 jumbo .cta {
     width: fit-content;
     margin: 0;
@@ -261,14 +265,14 @@ a.icon-container {
     jumbo {
         min-height: 250px;
         text-align: center;
-        background-size: 200% !important;
+        background-size: 230% !important;
     }
     jumbo .overlay { min-height: 250px; }
     jumbo .container > div {
         min-height: 235px;
         padding-left: 10px;
     }
-    jumbo h1 { font-size: 40px; }
+    jumbo h1 { font-size: 33px; }
     jumbo h3 { font-size: 21px; }
     jumbo .cta {
         float: none;
